# pg-format-py

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  tbump.toml
.github/workflows/: release.yml  test.yml
pgformat/: __init__.py  cli.py  grammar.lark  parser.py  serializer.py
tests/: test_parse.py  test_serialize.py  test_suite.py
