[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pgformat"
authors = [{name = "Jakob Voß", email = "jakob.voss@gbv.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/pg-format/pg-format-py"
Issues = "https://github.com/pg-format/pg-format-py/issues"

[project.scripts]
pgformat = "pgformat:cli"
